@@ -1,6 +1,7 @@
 0.5.1: (Future)
 Bugfixes:
  - GB MBC: Fix MBC7 when size is incorrectly specified
+ - GB Video: Setting LYC=LY during mode 2 should trigger an IRQ
 Misc:
  - All: Only update version info if needed
 
